实现发送邮件功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,12 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #logger
 #logging.level.com.jchen.community=debug
 #logging.file.name=e:/data/community.log
+
+#MailProperties
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=jchen057@163.com
+#163邮箱的密码为SMTP的授权码，不是原本密码
+spring.mail.password=JGGLHONEYHLCEIYA
+spring.mail.protocal=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
