完成注册功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.mail.username=jchen057@163.com
 spring.mail.password=JGGLHONEYHLCEIYA
 spring.mail.protocal=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+#community
+community.path.domain=http://localhost:8080
