--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,8 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=community-consumer-group
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000
+
+# ElasticSearchProperties
+spring.data.elasticsearch.cluster-name=jchen
+# 注意：elasticsearch有两个默认端口，其中9200是http形式访问，9300是tcp形式访问,java程序中一般用9300这个端口
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
