--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,3 +73,8 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk
+wk.image.command=d:/development/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage=e:/community/data/wk-images
+
