将头像和图片上传至七牛云服务器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,3 +78,10 @@ spring.quartz.properties.org.quartz.threadPool.threadCount=5
 wk.image.command=d:/development/wkhtmltopdf/bin/wkhtmltoimage
 wk.image.storage=e:/community/data/wk-images
 
+# qiniu
+qiniu.key.access=KVBoY_-33vwnTTqE3PBvhBcpwTO2zGqfYEDcr93k
+qiniu.key.secret=GsX8-RIC0TARL66EpSg3_tM77Nw31VqSZ_8otApY
+qiniu.bucket.header.name=jchen-community-header
+quniu.bucket.header.url=http://qr741uv74.hn-bkt.clouddn.com
+qiniu.bucket.share.name=jchen-community-share
+qiniu.bucket.share.url=http://qr74th82a.hn-bkt.clouddn.com
