优化网站性能，使用Caffeine添加本地缓存并进行测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,3 +85,7 @@ qiniu.bucket.header.name=jchen-community-header
 quniu.bucket.header.url=http://qr741uv74.hn-bkt.clouddn.com
 qiniu.bucket.share.name=jchen-community-share
 qiniu.bucket.share.url=http://qr74th82a.hn-bkt.clouddn.com
+
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
